<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/azure"
    android:id="@+id/main_display_layout"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lang_selection"
        android:textStyle="bold"
        android:textSize="@dimen/textAppearance_mdpi_22_sp"
        android:textColor="@color/blue"
        android:layout_marginTop="@dimen/factor_mdpi_15_dp"
        android:layout_marginStart="@dimen/factor_mdpi_10_dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/factor_mdpi_35_dp"
        android:layout_marginBottom="@dimen/factor_mdpi_25_dp"
        >

        <RadioGroup
            android:id="@+id/radioGroup_knames"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/factor_mdpi_20_dp"
            >

            <RadioButton
                android:id="@+id/selector_lang_bengali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/bengali"
                android:textColor="@color/black"
                android:textSize="@dimen/textAppearance_mdpi_20_sp"
                android:textStyle="bold"
                />
            <RadioButton
                android:id="@+id/selector_lang_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/english"
                android:textColor="@color/black"
                android:textSize="@dimen/textAppearance_mdpi_20_sp"
                android:textStyle="bold"
                />

            <RadioButton
                android:id="@+id/selector_lang_gujrati"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/gujrati"
                android:textColor="@color/black"
                android:textSize="@dimen/textAppearance_mdpi_20_sp"
                android:textStyle="bold"
                />

            <RadioButton
                android:id="@+id/selector_lang_hindi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/hindi"
                android:textColor="@color/black"
                android:textSize="@dimen/textAppearance_mdpi_20_sp"
                android:textStyle="bold"
                />

            <RadioButton
                android:id="@+id/selector_lang_malyalam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/malyalam"
                android:textColor="@color/black"
                android:textSize="@dimen/textAppearance_mdpi_20_sp"
                android:textStyle="bold"
                />


            <RadioButton
                android:id="@+id/selector_lang_marathi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/marathi"
                android:textColor="@color/black"
                android:textSize="@dimen/textAppearance_mdpi_20_sp"
                android:textStyle="bold"
                />

            <RadioButton
                android:id="@+id/selector_lang_nepali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/nepali"
                android:textColor="@color/black"
                android:textSize="@dimen/textAppearance_mdpi_20_sp"
                android:textStyle="bold"
                />


            <RadioButton
                android:id="@+id/selector_lang_oriya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/oriya"
                android:textColor="@color/black"
                android:textSize="@dimen/textAppearance_mdpi_20_sp"
                android:textStyle="bold"
                />


            <RadioButton
                android:id="@+id/selector_lang_punjabi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/punjabi"
                android:textColor="@color/black"
                android:textSize="@dimen/textAppearance_mdpi_20_sp"
                android:textStyle="bold"
                />

            <RadioButton
                android:id="@+id/selector_lang_tamil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/tamil"
                android:textColor="@color/black"
                android:textSize="@dimen/textAppearance_mdpi_20_sp"
                android:textStyle="bold"
                />

            <RadioButton
                android:id="@+id/selector_lang_telgu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/telgu"
                android:textColor="@color/black"
                android:textSize="@dimen/textAppearance_mdpi_20_sp"
                android:textStyle="bold"
                />


        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/language_layout_main_ok_but"
            android:layout_marginTop="@dimen/factor_mdpi_30_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/textAppearance_mdpi_35_sp"
            android:textAllCaps="false"
            android:background="@drawable/main_custom"
            android:paddingLeft="@dimen/factor_mdpi_20_dp"
            android:paddingRight="@dimen/factor_mdpi_20_dp"
            android:text="@string/ok"
            android:onClick="hideLanguageSelection"
            />

    </LinearLayout>
</LinearLayout>