<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pk.sai.StartActivity"
    >
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="2"
    android:background="@android:color/white"
    >


  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:layout_weight="1"
      android:layout_marginTop="@dimen/factor_mdpi_25_dp"
      >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sai_satcharitra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/sai_sat"
        android:textColor="@color/black"
        android:textSize="@dimen/textAppearance_mdpi_22_sp"
        android:textStyle="bold"
        android:background="@drawable/main_custom"
        android:textAllCaps="false"
        android:paddingTop="@dimen/factor_mdpi_120_dp"
        android:paddingBottom="@dimen/factor_mdpi_120_dp"
        android:layout_marginBottom="@dimen/factor_mdpi_126_dp"
        />




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/my_resolve_start"
        android:background="@drawable/main_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_resolves"
        android:textSize="@dimen/textAppearance_mdpi_22_sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginEnd="@dimen/factor_mdpi_10_dp"
        android:layout_marginStart="@dimen/factor_mdpi_10_dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingTop="@dimen/factor_mdpi_23_dp"
        android:paddingBottom="@dimen/factor_mdpi_23_dp"

        />


  </LinearLayout>

  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:layout_weight="1"
      android:layout_marginTop="@dimen/factor_mdpi_25_dp"
      >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/names_of_sai_baba"
        android:background="@drawable/main_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sai_names"
        android:textSize="@dimen/textAppearance_mdpi_22_sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingTop="@dimen/factor_mdpi_23_dp"
        android:paddingBottom="@dimen/factor_mdpi_23_dp"
        android:layout_marginStart="@dimen/factor_mdpi_05_dp"
        android:layout_marginBottom="@dimen/factor_mdpi_40_dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_custom"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/factor_mdpi_80_dp"
        android:layout_marginStart="@dimen/factor_mdpi_05_dp"
        android:layout_marginEnd="@dimen/factor_mdpi_10_dp"
        >

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/sai_bhajans"
          android:background="@drawable/sub_custom"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/sai_bhajan"
          android:textSize="@dimen/textAppearance_mdpi_22_sp"
          android:textStyle="bold"
          android:textAllCaps="false"
          android:textColor="@color/black"
          android:fontFamily="sans-serif-condensed-medium"
          android:paddingTop="@dimen/factor_mdpi_25_dp"
          android:paddingBottom="@dimen/factor_mdpi_25_dp"
          android:layout_marginTop="@dimen/factor_mdpi_30_dp"
          android:layout_marginStart="@dimen/factor_mdpi_10_dp"
          android:layout_marginEnd="@dimen/factor_mdpi_10_dp"

          />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/sai_assurances"
          android:background="@drawable/sub_custom"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/sai_saying"
          android:textSize="@dimen/textAppearance_mdpi_22_sp"
          android:textStyle="bold"
          android:textAllCaps="false"
          android:textColor="@color/black"
          android:fontFamily="sans-serif-condensed-medium"
          android:paddingTop="@dimen/factor_mdpi_25_dp"
          android:paddingBottom="@dimen/factor_mdpi_25_dp"
          android:layout_marginTop="@dimen/factor_mdpi_30_dp"
          android:layout_marginBottom="@dimen/factor_mdpi_30_dp"
          android:layout_marginStart="@dimen/factor_mdpi_10_dp"
          android:layout_marginEnd="@dimen/factor_mdpi_10_dp"
          />

    </LinearLayout>


  </LinearLayout>


</LinearLayout>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/app_settings"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/settings"
      android:contentDescription="@string/settings"
      android:layout_gravity="bottom|end"
      android:layout_marginEnd="@dimen/factor_mdpi_30_dp"
      android:layout_marginBottom="@dimen/factor_mdpi_30_dp"
      app:elevation="6dp"
      app:fabSize="normal"
      app:backgroundTint="@color/azure"
      />

</FrameLayout>
